--- a/Android App/app/src/main/res/layout/activity_mode_select.xml
+++ b/Android App/app/src/main/res/layout/activity_mode_select.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="144dp"
-        android:text="Testing Mode"
+        android:text="Send 1000 packets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="288dp"
-        android:text="Control Mode"
+        android:text="Toggle LED"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
